--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <header id="site-header">
 
     </header>
     <!-- /#site-header -->
-    
-    <main id="site-main">
 
+    <main class="site-main">
+        <div class="container">
+            <div class="row">
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- /#site-main -->
 
@@ -22,4 +37,5 @@
     </footer>
     <!-- /#site-footer -->
 </body>
+
 </html>
