--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -20,11 +23,19 @@
                 <div class="column-7">
                     <div class="img-card">
                         <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
                     </div>
                 </div>
                 <div class="column-7">
                     <div class="img-card">
                         <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
                     </div>
                 </div>
             </div>
