--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <!-- /#site-header -->
 
     <main class="site-main">
+        <div class="top-badge">
+            <span class="speaker_view">
+                <i class="fa-sharp fa-solid fa-table-cells"></i>
+                <span class="icon_name">Speaker View</span>
+            </span>
+            <span class="arrows">
+                <i class="fa-solid fa-arrows-up-down-left-right"></i>
+            </span>
+        </div>    
         <div class="container">
             <div class="row">
                 <div class="column-7">
