add nav container in footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
     <!-- /#site-main -->
 
     <footer id="site-footer">
+        <nav class="nav-container">
+            <div class="left-nav">
 
+            </div>
+            <div class="center-nav">
+
+            </div>
+            <div class="right-nav">
+                
+            </div>
+        </nav>
     </footer>
     <!-- /#site-footer -->
 </body>
