--- a/index.html
+++ b/index.html
@@ -55,13 +55,22 @@
     <footer id="site-footer">
         <nav class="nav-container">
             <div class="left-nav">
-
+                <div class="icon">
+                    <i class="fa-solid fa-microphone"></i>
+                    <div class="icon_name">Mute</div>
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+                <div class="icon">
+                    <i class="fa-solid fa-video"></i>
+                     <div class="icon_name">Stop Video</div>
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
             </div>
             <div class="center-nav">
 
             </div>
             <div class="right-nav">
-                
+
             </div>
         </nav>
     </footer>
