--- a/index.html
+++ b/index.html
@@ -67,7 +67,39 @@
                 <i class="fa-solid fa-angle-up"></i>
             </div>
             <div class="center-nav">
-
+                <div class="icon">
+                    <i class="fa-solid fa-user-plus"></i>
+                    <div class="icon_name">Invite</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-user-group"></i>
+                    <div class="icon_name">Manage Participants</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-chart-column"></i>
+                    <div class="icon_name">Polling</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-share-from-square bg-green"></i>
+                    <div class="icon_name">Share Screen</div>
+                </div>
+                <i class="fa-solid fa-angle-up"></i> 
+                <div class="icon">
+                    <i class="fa-solid fa-comment"></i>
+                    <div class="icon_name">Chat</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-record-vinyl"></i>
+                    <div class="icon_name">Record</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-border-all"></i>
+                    <div class="icon_name">Breakout Room</div>
+                </div>
+                <div class="icon">
+                    <i class="fa-solid fa-ellipsis"></i>
+                    <div class="icon_name">More</div>
+                </div>
             </div>
             <div class="right-nav">
 
