--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="right-nav">
-
+                <a href="" class="end-meeting">End meeting</a>
             </div>
         </nav>
     </footer>
