add all the columns

--- a/index.html
+++ b/index.html
@@ -47,6 +47,303 @@
                         </div>
                     </div>
                 </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-7">
+                    <div class="img-card">
+                        <img width="100%" src="https://picsum.photos/250/150" alt="">
+                        <div class="user-name">
+                            <span><i class="fa-solid fa-microphone-slash"></i></span>
+                            <span>Pinco Pallo</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
